delete number of navbar and fix spacing icon services

--- a/style.css
+++ b/style.css
@@ -157,14 +157,16 @@ button:focus {
 /* section services */
 .light-btn {
     transition: all 0.3s;
+    display: flex;
+    align-items: center;
 }
 
 .light-btn::after {
     content: '\2212';
-    float: right;
     font-size: 24px;
     font-weight: 800;
     margin-left: 8px;
+    margin-left: auto;
 }
 
 .light-btn:hover {
